--- a/src/components/collapse/_Collapse.scss
+++ b/src/components/collapse/_Collapse.scss
@@ -3,7 +3,8 @@
     margin: 0 auto;
     // max-width: 70%;
     @media screen and (max-width: $breakpoint-2) {
-        max-width: 95%;
+        max-width: 100%
+
     }
 
     &__title {
