--- a/src/components/gallery/_Gallery.scss
+++ b/src/components/gallery/_Gallery.scss
@@ -27,7 +27,7 @@
   
 
   @media screen and (max-width: $breakpoint-2) {
-    width: 48%;
+    width: 500px;
     
   }
   @media screen and (max-width: $breakpoint-3) {
