--- a/src/components/ficheLogement/Host/_Host.scss
+++ b/src/components/ficheLogement/Host/_Host.scss
@@ -1,17 +1,32 @@
 .container-host {
     display: flex;
     margin-top: 2%;
-    left: 10%;
+    left: 2%;
     position: relative;
+
+    
+    @media screen and (max-width: 600px) {
+        order: 3
+       }
  
 &__name {
 
         width: 40%;
         text-align: right;
         margin-right: 10%;
+        @media screen and (max-width: 600px) {
+            font-size: 12px !important;
+           }
+        
+
+        
+     
     }
     &__avatar{
         height: 64px;
         border-radius: 50%;
+        @media screen and (max-width: 600px) {
+           height: 42px;
+          }
     }
 }
