--- a/src/styles/Base/_variables.scss
+++ b/src/styles/Base/_variables.scss
@@ -5,10 +5,11 @@ $footer-color: #000000;
 
 
 
-
-$breakpoint-desktop: 769px;
+ 
+$breakpoint-desktop: 769px; 
+$breakpoint-mobile: 500px; 
 $breakpoint-2: 1216px;
-$breakpoint-3: 800px;
+$breakpoint-3: 900px;
 
 
 $font-family: "Montserrat";
