--- a/src/components/card/_Card.scss
+++ b/src/components/card/_Card.scss
@@ -11,7 +11,7 @@
     
 }
     
-     background-color: $primary-color;
+    //  background-color: $primary-color;
      margin: 30px;
      border-radius: 10px;
       text-decoration: none;
@@ -29,7 +29,7 @@
          text-decoration: none;
      }
      @media screen and (max-width: $breakpoint-desktop) {
-        margin:auto;
+        // margin:auto;
          
        }
     
