--- a/src/components/collapse/_Collapse.scss
+++ b/src/components/collapse/_Collapse.scss
@@ -2,7 +2,7 @@
 
     margin: 0 auto;
     // max-width: 70%;
-    @media screen and (max-width: $breakpoint-2) {
+    @media screen and (max-width: 700px) {
         max-width: 100%
 
     }
