--- a/src/components/errorMain/_ErrorMain.scss
+++ b/src/components/errorMain/_ErrorMain.scss
@@ -2,13 +2,22 @@
     color: $primary-color;
     margin: auto;
     text-align: center;
+
+
+    @media screen and (max-width: 700px) {
+              
+                margin-bottom: 40%;
+                
+              }
+    
         &__errorNumber{
             font-size: 288px;
             font-weight: 700;
             margin-bottom: 20px;
             margin-top: 20px;
-            @media screen and (max-width: $breakpoint-2) {
+            @media screen and (max-width: 700px) {
                 font-size: 96px;
+                margin-bottom: 10%;
                 
               }
         }
@@ -17,16 +26,17 @@
 &__errorText{
     font-size: 36px;
     margin-bottom: 12%;
-    @media screen and (max-width: $breakpoint-2) {
-        font-size: 18px;
-        
+    @media screen and (max-width: 700px) {
+        font-size: 22px;
+        margin-bottom: 20%;
       }
 }
 &__errorLinkHome{
     font-size: 18px;
     text-decoration: underline;
-    @media screen and (max-width: $breakpoint-2) {
+    @media screen and (max-width: 700px) {
         font-size: 14px;
+        margin-bottom: 200px;
         
       }
 }
