--- a/src/components/ficheLogement/Host/_Host.scss
+++ b/src/components/ficheLogement/Host/_Host.scss
@@ -1,20 +1,38 @@
 .container-host {
     display: flex;
+    width: 22%;
     margin-top: 2%;
-    left: 2%;
+    left: 6%;
     position: relative;
+    padding-bottom: 0.7%;
 
     
-    @media screen and (max-width: 600px) {
-        order: 3
+    @media screen and (max-width: 1850px) {
+        left:4%;
+    
+       }
+
+       @media screen and (max-width: 1450px) {
+        left:2%;
+    
+       }
+
+
+    @media screen and (max-width: 700px) {
+        left: 0%;
+        order: 3;
+        // margin-top: 20px;
+        // width: 40%;
        }
  
 &__name {
 
-        width: 40%;
-        text-align: right;
-        margin-right: 10%;
-        @media screen and (max-width: 600px) {
+        // width: 28%;
+        text-align: right !important;
+        // margin-right: 19%;
+        // padding-right: 9%;
+        padding-top: 4%;
+        @media screen and (max-width: 700px) {
             font-size: 12px !important;
            }
         
@@ -24,6 +42,7 @@
     }
     &__avatar{
         height: 64px;
+        margin-left: 6%;
         border-radius: 50%;
         @media screen and (max-width: 600px) {
            height: 42px;
