--- a/src/components/ficheLogement/Rating/_Rating.scss
+++ b/src/components/ficheLogement/Rating/_Rating.scss
@@ -1,15 +1,23 @@
 
 .container-star{
     float: right;
-    @media screen and (max-width: 600px) {
-        padding-top:2%;
+    // display: flex;
+    white-space: nowrap;
+    @media screen and (max-width: 700px) {
+        // width: 49%;
+        padding-top:4%;
         padding-left: 0.5%;
        }
-}
 
-.img {
-    height: 24;
-    width: 24;
-    color: $primary-color
-}
+       &__icon{
+        padding-left: 10px;
+    height: 22px;
+    // color: $primary-color;
+    @media screen and (max-width: 700px) {
+        height: 14px;
+        padding-left: 10px;
+       }
+
+    
+}}
 
