--- a/src/components/ficheLogement/_ficheLogement.scss
+++ b/src/components/ficheLogement/_ficheLogement.scss
@@ -1,3 +1,4 @@
+// Conteneur principal pour la fiche produit
 .container-produit {
   text-align: center;
   width: 100%;
@@ -5,76 +6,58 @@
   color: $primary-color;
   font-size: 18px;
 
+  // Détails principaux
   &__details {
-    @media screen and (min-width: 400px) {
-      width: 98%;
-    }
-    @media screen and (min-width: 600px) {
-      width: 80%;
-    }
-    @media screen and (min-width: 1000px) {
-      width: 70%;
-    }
-    // width: 70%;
-    flex-wrap: wrap;
-    display: inline-flex;
-    flex: 1 1 0px;
-    justify-content: space-between;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
 
-  //   @media screen and (max-width: $breakpoint-mobile) {
-  //    width: 90%;
-  //  }
+      @media screen and (min-width: 400px) {
+          width: 98%;
+      }
+      @media screen and (min-width: 600px) {
+          width: 80%;
+      }
+      @media screen and (min-width: 1000px) {
+          width: 70%;
+      }
   }
-  
+
+  // Sections collapsibles (description et équipements)
   &__collapse {
-    @media screen and (max-width: 700px) {
-      display: block;
-      order: 3;
-     }
-   display: flex; 
-   max-height: 400px;
-  justify-content: space-between;
-  // gap: 10px; 
-  width: 100%;
-  flex-wrap: wrap; 
-  gap: 3%;
-  span{
-    padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      width: 100%;
+      gap: 3%;
+
+      @media screen and (max-width: 700px) {
+          display: block;
+      }
+
+      &___left,
+      &___right {
+          flex: 1 1 45%;
+          max-width: 48%;
+          min-width: 45%;
+          box-sizing: border-box;
+
+          &__equipments {
+              height: 15px;
+          }
+      }
   }
 
-  &___left, 
-  &___right {
-
-    @media screen and (max-width: 700px) {
-      max-width: 100%;
-     }
-    flex: 1 1 45%; 
-    max-width: 48%; 
-    min-width: 45%; 
-    box-sizing: border-box;
-  &__equipments {
-    height: 15px;
+  // Paragraphes
+  p {
+      font-size: 18px;
+      margin: 0;
+      text-align: left;
   }
+
+  // Équipements
+  .text-equipements {
+      margin-top: 10px !important;
+      padding: 0 !important;
   }
-  }
-p {
-  font-size: 18px;
-  // padding: 10px ;
-  margin: 0;
-  text-align: left;
-  // height: 200px;
 }
-ul{
-  margin: 5px 0 5px;
-}
-}
-
-
-
-.text-equipements{
- margin-top: 10px !important;
- padding: 0 !important;
-}
-
- 
-
