--- a/src/styles/Base/_variables.scss
+++ b/src/styles/Base/_variables.scss
@@ -1,15 +1,20 @@
+//variables couleurs
+
 $primary-color: #ff6060;
 $secondary-color: #F6F6F6;
 $tertiary-color: #FFFFFF;
 $footer-color: #000000;
 
 
-
+//variables pour les breakpoints
  
 $breakpoint-desktop: 769px; 
 $breakpoint-mobile: 500px; 
 $breakpoint-2: 1216px;
 $breakpoint-3: 900px;
 
+
+
+//variable font 
 
 $font-family: "Montserrat";
