--- a/src/components/collapse/_Collapse.scss
+++ b/src/components/collapse/_Collapse.scss
@@ -1,10 +1,8 @@
 .collapse {
+    margin: 0 auto; // Centrage du composant
 
-    margin: 0 auto;
-    // max-width: 70%;
     @media screen and (max-width: 700px) {
-        max-width: 100%
-
+        max-width: 100%; // Utilise toute la largeur sur petits écrans
     }
 
     &__title {
@@ -14,68 +12,51 @@
         height: 47px;
         background-color: $primary-color;
         color: $secondary-color;
-        border-radius: 5px;
+        border-radius: 5px; // Coins arrondis
         font-size: 24px;
         position: relative;
         padding-left: 9px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        display: flex; // Alignement en ligne
+        align-items: center; // Centré verticalement
+        justify-content: space-between; // Espace entre le titre et l'icône
 
         @media screen and (max-width: $breakpoint-desktop) {
-            font-size: 13px;
+            font-size: 13px; // Texte réduit sur petits écrans
         }
-
-       
 
         &__arrow {
             height: 14px;
             margin-right: 15px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
+            cursor: pointer; // Change le pointeur en main
+            transition: transform 0.3s ease; // Animation de rotation
 
             &.rotate-180 {
-                transform: rotate(180deg);
+                transform: rotate(180deg); // Rotation de l'icône si cloquée
             }
         }
     }
 
     &__text {
-        margin: auto ;
-        
-        display: none;
+        margin: auto;
+        display: none; // Masqué par défaut
         padding: 15px 9px 0px;
-        max-height: 0;
-        overflow: hidden;
-        opacity: 0;
+        max-height: 0; // Pas de hauteur par défaut
+        overflow: hidden; // Masque le contenu débordant
+        opacity: 0; // Rendu invisible
         max-width: 1023px;
         min-width: 40%;
         background-color: $secondary-color;
         color: $primary-color;
-        border-radius: 5px;
-        font-size: 24px; 
+        border-radius: 5px; // Coins arrondis
+        font-size: 24px;
 
         @media screen and (max-width: $breakpoint-desktop) {
-            min-width: 50%;
+            min-width: 50%; // S'adapte aux petits écrans
         }
-        
-       
-        transition: max-height 0.4s ease, opacity 0.4s ease;
 
+        transition: max-height 0.4s ease, opacity 0.4s ease; 
         @media screen and (max-width: $breakpoint-desktop) {
-            font-size: 13px;
+            font-size: 13px; 
         }
-        
-        &.show {
-            padding-bottom: 20px;
-            display: flex;
-            max-height: 400px;
-            opacity: 1;
-            margin-bottom: 20px;
-            // min-height: 180px;
-            // width: fit-content;
-            height: fit-content;
-        }
-    }
-}
 
+    }}
