--- a/src/components/ficheLogement/Rating/_Rating.scss
+++ b/src/components/ficheLogement/Rating/_Rating.scss
@@ -1,23 +1,20 @@
-
-.container-star{
+// Style pour le conteneur de note
+.container-star {
     float: right;
-    // display: flex;
     white-space: nowrap;
+
     @media screen and (max-width: 700px) {
-        // width: 49%;
-        padding-top:4%;
+        padding-top: 4%;
         padding-left: 0.5%;
-       }
+    }
 
-       &__icon{
+    // Style pour chaque étoile
+    &__icon {
         padding-left: 10px;
-    height: 22px;
-    // color: $primary-color;
-    @media screen and (max-width: 700px) {
-        height: 14px;
-        padding-left: 10px;
-       }
+        height: 22px;
 
-    
-}}
-
+        @media screen and (max-width: 700px) {
+            height: 14px;
+        }
+    }
+}
