--- a/src/components/gallery/_Gallery.scss
+++ b/src/components/gallery/_Gallery.scss
@@ -1,39 +1,30 @@
-.gallery{
-    background-color: $secondary-color;
-    max-width: 1240px;
-    width: 95%;
+// Styles pour la galerie de logements
+.gallery {
+  background-color: $secondary-color;
+  max-width: 1240px;
+  width: 95%;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-    margin: auto;
-    border-radius: 25px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
-    @media screen and (max-width: $breakpoint-desktop) {
-        // width: 93%;
-        
-        
+  margin: auto;
+  border-radius: 25px;
+
+  @media screen and (max-width: $breakpoint-desktop) {
+      width: 100%;
+  }
+
+  // Styles pour chaque item de la galerie
+  &__item {
+      display: flex;
+      justify-content: center;
+      width: 33%;
+      margin: auto;
+
+      @media screen and (max-width: 1200px) {
+          width: 50%;
       }
 
-    &__item{
-        display: inline-flex;
-        justify-content: space-around;
-  margin: auto;
-//   padding: -50px;
-  width: 33%;
-  
-  
-
-  
-  @media screen and (max-width:1200px) {
-    width: 50%;
-    
+      @media screen and (max-width: 800px) {
+          width: 100%;
+      }
   }
-  @media screen and (max-width:800px) {
-    width: 100%;
-    
-  }
-    }
 }
