--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,6 +17,10 @@ html {
 .home {
   width: 100%;
 }
+.home .main {
+  width: 100%;
+  margin: auto;
+}
 
 .about {
   width: 100%;
@@ -94,7 +98,7 @@ html {
   font-size: 18px;
 }
 .container-title__title {
-  margin: 10px 0px 5px 0;
+  margin: 10px 0 5px 0;
   text-align: left;
   width: 80%;
   font-size: 36px;
@@ -125,7 +129,6 @@ html {
 @media screen and (max-width: 700px) {
   .container-star__icon {
     height: 14px;
-    padding-left: 10px;
   }
 }
 
@@ -145,30 +148,28 @@ html {
   position: absolute;
   width: 100px;
   top: 40%;
-  z-index: 3;
   left: 4vw;
+  z-index: 3;
 }
 @media screen and (max-width: 600px) {
   .container-slideshow__leftArrow {
-    left: 0vw;
-    top: 40%;
+    left: 0;
   }
 }
 .container-slideshow__leftArrow img {
   height: 6vw;
 }
 .container-slideshow__rightArrow {
+  cursor: pointer;
   position: absolute;
   width: 100px;
   top: 40%;
   right: 4vw;
   z-index: 3;
-  cursor: pointer;
 }
 @media screen and (max-width: 600px) {
   .container-slideshow__rightArrow {
-    right: 0vw;
-    top: 40%;
+    right: 0;
   }
 }
 .container-slideshow__rightArrow img {
@@ -186,19 +187,7 @@ html {
     visibility: hidden;
   }
 }
-.container-slideshow__fade {
-  opacity: 1;
-  text-align: center;
-  z-index: 0;
-  height: 6vw;
-  width: 100%;
-  position: absolute;
-  height: 411px;
-  border-radius: 25px;
-  background-color: rgb(88, 14, 14);
-}
 .container-slideshow__img {
-  z-index: 0;
   z-index: 0;
   height: 411px;
   width: 90%;
@@ -216,7 +205,6 @@ html {
     width: 99%;
   }
 }
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -227,6 +215,7 @@ html {
     background-color: transparent;
   }
 }
+
 .hide {
   visibility: hidden;
 }
@@ -269,9 +258,8 @@ html {
   font-size: 18px;
 }
 .container-produit__details {
+  display: flex;
   flex-wrap: wrap;
-  display: inline-flex;
-  flex: 1 1 0px;
   justify-content: space-between;
 }
 @media screen and (min-width: 400px) {
@@ -291,31 +279,21 @@ html {
 }
 .container-produit__collapse {
   display: flex;
-  max-height: 400px;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
-  flex-wrap: wrap;
   gap: 3%;
 }
 @media screen and (max-width: 700px) {
   .container-produit__collapse {
     display: block;
-    order: 3;
   }
-}
-.container-produit__collapse span {
-  padding: 0;
 }
 .container-produit__collapse___left, .container-produit__collapse___right {
   flex: 1 1 45%;
   max-width: 48%;
   min-width: 45%;
   box-sizing: border-box;
-}
-@media screen and (max-width: 700px) {
-  .container-produit__collapse___left, .container-produit__collapse___right {
-    max-width: 100%;
-  }
 }
 .container-produit__collapse___left__equipments, .container-produit__collapse___right__equipments {
   height: 15px;
@@ -325,11 +303,7 @@ html {
   margin: 0;
   text-align: left;
 }
-.container-produit ul {
-  margin: 5px 0 5px;
-}
-
-.text-equipements {
+.container-produit .text-equipements {
   margin-top: 10px !important;
   padding: 0 !important;
 }
@@ -396,15 +370,6 @@ html {
     font-size: 13px;
   }
 }
-.collapse__text.show {
-  padding-bottom: 20px;
-  display: flex;
-  max-height: 400px;
-  opacity: 1;
-  margin-bottom: 20px;
-  height: -moz-fit-content;
-  height: fit-content;
-}
 
 .banner {
   border-radius: 10px;
@@ -418,7 +383,6 @@ html {
   .banner {
     width: 95%;
     text-align: center;
-    text-wrap: wrap;
   }
 }
 .banner__img {
@@ -443,16 +407,12 @@ html {
   position: absolute;
   top: 0;
   z-index: 2;
-  opacity: 30%;
+  opacity: 0.3;
 }
 @media screen and (max-width: 769px) {
   .banner__shadow {
     max-height: 111px;
-    border-radius: 25px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
+    border-radius: 20px;
   }
 }
 .banner__title {
@@ -464,22 +424,14 @@ html {
   font-size: 48px;
   font-weight: 500;
   text-align: center;
-  text-wrap: nowrap;
   z-index: 3;
-}
-.banner__title__br {
-  display: none;
 }
 @media screen and (max-width: 800px) {
   .banner__title {
     width: 70%;
     font-size: 24px;
-    text-wrap: wrap;
     text-align: left;
     margin-left: -10%;
-  }
-  .banner__title__br {
-    display: block;
   }
 }
 
@@ -497,8 +449,8 @@ html {
   }
   .header .logo {
     width: 40%;
-    padding: 0;
     height: auto;
+    padding: 0;
   }
 }
 
@@ -507,8 +459,6 @@ html {
   font-size: 24px;
   text-decoration: none;
   display: flex;
-  text-wrap: nowrap;
-  display: initial;
 }
 @media screen and (max-width: 769px) {
   .nav-header {
@@ -516,16 +466,16 @@ html {
     font-size: 17px;
   }
 }
-.nav-header__nav-url-on {
+.nav-header__nav-url_on {
   color: #ff6060;
   padding-left: 2rem;
   padding-top: 1em;
-  text-decoration: none;
+  text-decoration: underline;
 }
-.nav-header__nav-url-on:visited {
+.nav-header__nav-url_on:visited {
   color: #ff6060;
 }
-.nav-header__nav-url-on:focus, .nav-header__nav-url-on:hover {
+.nav-header__nav-url_on:focus, .nav-header__nav-url_on:hover {
   text-decoration: underline;
 }
 .nav-header__nav-url {
@@ -540,38 +490,26 @@ html {
 .nav-header__nav-url:focus, .nav-header__nav-url:hover {
   text-decoration: underline;
 }
-.nav-header__nav-url_on {
-  color: #ff6060;
-  padding-left: 2rem;
-  padding-top: 1em;
-  text-decoration: underline;
-}
-.nav-header__nav-url_on:visited {
-  color: #ff6060;
-}
-.nav-header__nav-url_on:focus, .nav-header__nav-url_on:hover {
-  text-decoration: underline;
-}
 
 .gallery {
   background-color: #F6F6F6;
   max-width: 1240px;
   width: 95%;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   margin: auto;
   border-radius: 25px;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -o-border-radius: 25px;
+}
+@media screen and (max-width: 769px) {
+  .gallery {
+    width: 100%;
+  }
 }
 .gallery__item {
-  display: inline-flex;
-  justify-content: space-around;
-  margin: auto;
+  display: flex;
+  justify-content: center;
   width: 33%;
+  margin: auto;
 }
 @media screen and (max-width: 1200px) {
   .gallery__item {
@@ -605,12 +543,17 @@ html {
   top: -25%;
   left: 5%;
   color: #FFFFFF;
-  text-decoration: none !important;
   text-align: left;
   z-index: 3;
+  text-decoration: none !important;
 }
 .card__title__:visited {
   text-decoration: none;
+}
+@media screen and (max-width: 769px) {
+  .card__title {
+    margin: auto;
+  }
 }
 .card__cover {
   height: 340px;
@@ -627,17 +570,15 @@ html {
   }
 }
 .card__cover-shadow {
-  background: rgb(255, 255, 255);
-  background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%, rgba(126, 126, 126, 0.3113620448) 100%);
+  background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 0) 100%);
   height: 340px;
   width: 340px;
   border-radius: 10px;
   position: absolute;
-  z-index: 3;
+  z-index: 2;
 }
 .card__cover-shadow:hover {
-  background: rgb(255, 255, 255);
-  background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%, rgba(126, 126, 126, 0.3113620448) 100%);
+  background: linear-gradient(5deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 45%, rgba(255, 255, 255, 0) 100%);
 }
 
 .container-error {
@@ -653,8 +594,7 @@ html {
 .container-error__errorNumber {
   font-size: 288px;
   font-weight: 700;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin: 20px 0;
 }
 @media screen and (max-width: 700px) {
   .container-error__errorNumber {
@@ -687,7 +627,7 @@ html {
   background-color: #000000;
   height: 209px;
   width: 100%;
-  margin: 2% auto 0% 0;
+  margin: 2% auto 0;
   text-align: center;
 }
 .footer__logo {
