--- a/src/components/banner/_Banner.scss
+++ b/src/components/banner/_Banner.scss
@@ -50,7 +50,7 @@
       font-weight: 500;
       text-align: center;
       z-index: 3;
-
+    width: 80%;
       @media screen and (max-width: 800px) {
           width: 70%;
           font-size: 24px; // Texte plus petit pour petits écrans
