--- a/src/components/collapse/_Collapse.scss
+++ b/src/components/collapse/_Collapse.scss
@@ -1,7 +1,7 @@
 .collapse {
     margin: 0 auto; // Centrage du composant
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: $breakpoint-2){
         max-width: 100%; // Utilise toute la largeur sur petits écrans
     }
 
@@ -49,7 +49,9 @@
         color: $primary-color;
         border-radius: 5px; // Coins arrondis
         font-size: 24px;
-
+        @media screen and (max-width: 600px) {
+                margin-bottom: 20%;
+        }
         @media screen and (max-width: $breakpoint-desktop) {
             min-width: 50%; // S'adapte aux petits écrans
         }
@@ -57,6 +59,18 @@
         transition: max-height 0.4s ease, opacity 0.4s ease; 
         @media screen and (max-width: $breakpoint-desktop) {
             font-size: 13px; 
+        }
+         
+        &.show {
+            padding-bottom: 20px;
+            display: flex;
+            max-height: 400px;
+            opacity: 1;
+            margin-bottom: 20px;           
+           
+            // min-height: 180px;
+            // width: fit-content;
+            height: fit-content;
         }
 
     }}
