--- a/src/css/main.css
+++ b/src/css/main.css
@@ -362,28 +362,18 @@ html {
 }
 .collapse__text {
   margin: auto;
-  display: none;
-  padding: 15px 9px 0px;
+  padding: 0 9px;
   max-height: 0;
   overflow: hidden;
   opacity: 0;
+  visibility: hidden; /* Hide the element visually and from screen readers */
   max-width: 1023px;
   min-width: 40%;
   background-color: #F6F6F6;
   color: #ff6060;
   border-radius: 5px;
   font-size: 24px;
-  transition: max-height 0.4s ease, opacity 0.4s ease;
-}
-@media screen and (max-width: 600px) {
-  .collapse__text {
-    margin-bottom: 20%;
-  }
-}
-@media screen and (max-width: 769px) {
-  .collapse__text {
-    min-width: 50%;
-  }
+  transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0s linear 0.4s; /* Delay visibility change until after the transition */
 }
 @media screen and (max-width: 769px) {
   .collapse__text {
@@ -391,13 +381,12 @@ html {
   }
 }
 .collapse__text.show {
-  padding-bottom: 20px;
-  display: flex;
+  padding: 15px 9px 20px; /* Adjust padding for visible content */
   max-height: 400px;
   opacity: 1;
+  visibility: visible; /* Make the element visible */
+  transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0s linear 0s; /* No delay for showing */
   margin-bottom: 20px;
-  height: -moz-fit-content;
-  height: fit-content;
 }
 
 .banner {
